# Bib2NotionDB

./: README.md  setup.cfg
bib2_notiondb/: __main__.py  bibtex.py  config.py  download.py  main.py  notion_api.py  publication.py  run.py  utilities.py
notion_scholar/: __main__.py  bibtex.py  config.py  download.py  main.py  notion_api.py  run.py  utilities.py
test/: test_run.py
