[metadata]
name = bib2notiondb
version = 0.2.0
description = Reference management using Python and Notion.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sohei Kodama
author_email = gundam634rx78.2@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    bibtexparser
    keyring
    notion-client
    platformdirs
    setuptools

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    bn = bib2_notiondb.__main__:main
    bib2notiondb = bib2_notiondb.__main__:main
